--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p>很高兴你来到这里, 你可以在以下的网站找到我们</p>
 
 <ul>
-  <li> <a href="https://www.iraeta.cn/index.php?s=/index/index.html">官网</a> </li>
+  <li> <a href="https://www.iraeta.cn/index.php?s=/index/index.html">官方网站</a> </li>
   <li> <a href="https://twitter.com/IraetaForgings">Twitter</a> </li>
   <li> <a href="https://www.youtube.com/channel/UC__ub-CDelvDMF1nuY8587w">YouTube</a> </li>
   <li> <a href="https://www.facebook.com/Iraetagrindingmedia/">Facebook</a> </li>
