--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 
 伊莱特在清洁能源、化石能源、重型装备和矿山开采等领域占有重要的市场地位，包括：
 
-在风电领域，我们是中国塔筒法兰的主要制造商1，并为东汽10MW，GE 12MW风机提供过塔筒法兰；
+在风电领域，我们是中国塔筒法兰的主要制造商，并为东汽10MW，GE 12MW风机提供过塔筒法兰；
 
-在核电领域，我们在世界范围内保持有直径15.6米超大锻环的制造记录2；
+在核电领域，我们在世界范围内保持有直径15.6米超大锻环的制造记录；
 
 在管道法兰领域，我们拥有超过20年的出口经验，并获得了八国船级社的认证；
 
-在矿山研磨领域，我们的锻造耐磨钢球出口量位居行业前五3；
+在矿山研磨领域，我们的锻造耐磨钢球出口量位居行业前五；
 
 在行业、团体标准制定上，我们参与了风电环形锻件、锻轧钢球、特高压管塔法兰、锻轧式大型筒体等8项标准的起草与制定。
 
