--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
   <li> <a href="https://www.iraeta.cn/index.php?s=/index/index.html">伊莱特</a> </li>
   <li> <a href="https://twitter.com/IraetaForgings">Twitter</a> </li>
   <li> <a href="https://www.youtube.com/channel/UC4ANlff98ncOZWaEFQN3tzg">YouTube</a> </li>
-  <li> <a href="https://www.facebook.com/Iraetagrindingmedia/">Facebook</a> </li>
+  <li> <a href="https://www.facebook.com/iraetaforgings//">Facebook</a> </li>
 </ul>
