--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
-<p>Hello 大家好</p>
-<p>伊莱特能源装备股份有限公司是一家以“锻造”为主业，进行多元产品经营的制造企业，我们的主要产品包括盘类、环类、筒体及异形锻件，耐磨钢球、钢段及钢棒，主要应用于风电、核电、特高压、石化、海工、机械制造、采矿等领域。
+<p>Iraeta Energy Equipment Co., Ltd. (Abbreviation"IRAETA") is a manufacturing concern that specializes mainly in a diversified range of products within the forgings industry. Our main products include discs, rings, hollows and special-shaped forgings; grinding balls, rods and liners, mainly used in fields such as wind power, nuclear power, UHV, petrochemical, offshore engineering, machinery manufacturing, mining and other fields.
 
 
 
-伊莱特在清洁能源、化石能源、重型装备和矿山开采等领域占有重要的市场地位，包括：
+IRAETA has an important market position in the fields of clean energy, fossil energy, heavy equipment and mining, including:
 
-在风电领域，我们是中国塔筒法兰的主要制造商，并为东汽10MW，GE 12MW风机提供过塔筒法兰；
+In the field of wind power, we are the main manufacturer of tower flanges in China , and provided tower flanges for DTC 10MW and GE 12MW;
 
-在核电领域，我们在世界范围内保持有直径15.6米超大锻环的制造记录；
+In the field of nuclear power, we maintain a manufacturing record of diameter 15.6 meters in forging rings worldwide ;
 
-在管道法兰领域，我们拥有超过20年的出口经验，并获得了八国船级社的认证；
+In the field of pipe flanges, we have more than 20 years of export experience, and obtained the certification of the eight countries classification society;
 
-在矿山研磨领域，我们的锻造耐磨钢球出口量位居行业前五；
-
-在行业、团体标准制定上，我们参与了风电环形锻件、锻轧钢球、特高压管塔法兰、锻轧式大型筒体等8项标准的起草与制定。
+In the field of mine grinding, our export volume of forged grinding steel balls ranks among the top five in the industry;
 
 
 
-伊莱特的历史可追溯至1971年，现有1个销售公司、5个制造事业部、7个管理中心及1个海外工厂，总占地约35万平，员工1300余人。近半个世纪来，伊莱特始终扎根于锻造行业心无旁骛，从大西洋沿岸的海上风机、到中东沙漠深处的油田、再到秘鲁崇山峻岭中的矿山，都能见到我们产品的身影。秉承“诚实、谦逊、坚韧、拼搏”的价值观，伊莱特始终致力于通过高质量产品为全球客户创造可持续价值。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我们</p>
+IRAETA's history can be traced back to 1971. It now has 1 sales company, 5 business divisions, 7 management centers and 1 overseas factory, covering an area of 350,000 m2 and having over 1,300 employees. For nearly half a century, IRAETA has always been steadfastly devoted to the forging industry. From offshore wind turbines on the Atlantic coast to the oil fields deep in the deserts of the Middle East, to mines in the lofty mountains of Peru, our products have made their mark. Adhering to the values of “honesty, humility, perseverance and work”, IRAETA is committed to creating sustainable value for global customers through high-quality products.</p>
 
 <ul>
-  <li> <a href="https://www.iraeta.cn/index.php?s=/index/index.html">伊莱特</a> </li>
+  <li> <a href="https://www.iraeta.com/index.php?s=/index/index.html">Iraeta</a> </li>
   <li> <a href="https://twitter.com/IraetaForgings">Twitter</a> </li>
   <li> <a href="https://www.youtube.com/channel/UC4ANlff98ncOZWaEFQN3tzg">YouTube</a> </li>
   <li> <a href="https://www.facebook.com/iraetaforgings//">Facebook</a> </li>
